Added content for Medha Bytes

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,75 @@
 <body>
   <main>
     <h1>Welcome to Medha Bytes!!</h1>
+    <h2>Technology Made Simple, Accessible, and Human</h2>
+    <h3>At Medhabytes, we blend human intelligence (Medha) with digital innovation (Bytes) to ensure no one—especially senior citizens—is left behind in the fast-changing world of technology.</h3>
+<p>
+<b>CTA Buttons:</b>
+<ul>
+  <li>Discover Our Solutions</li>
+  <li>Learn with Byte-Sized Knowledge</li>
+</ul>
+
+</p>
+<h3>About Us</h3>
+<b>Our Philosophy:</b>
+We believe technology should empower everyone. For seniors, small businesses, and curious learners, we design solutions that are simple, inclusive, and engaging.
+</p>
+<p>
+<b>Our Promise:</b>
+<ul>
+  <li>Accessible websites with zoomed-in layouts and clear navigation</li>
+  <li>Videos paced slower than usual, with subtitles and voiceovers</li>
+  <li>Byte-sized articles that explain AI, mobile phone features, and everyday digital tools in plain language</li>
+</ul>
+
+</p>
+<p>
+<b>Services</b>
+<ul>
+  <li>
+     Senior-Friendly Websites
+     <ul><li>Large fonts, high-contrast colors, and simplified menus for easy navigation.</li></ul>
+  </li>
+  <li>
+    Educational Videos
+<ul><li>Slow-paced tutorials with clear visuals, subtitles, and voice guidance.</li></ul>
+  </li>
+  <li>
+Byte-Sized Knowledge Articles
+<ul><li>Short, easy-to-read guides on topics like “What is AI?”, “How to use WhatsApp,” or “Managing photos on your phone.”</li></ul>
+  </li>
+  <li>
+Small Business Solutions
+<ul><li>Affordable websites and apps that help local businesses thrive online.</li></ul>
+  </li>
+</ul>
+
+</p>
+<p>
+<b>Knowledge Hub (Blog/Resources)</b>
+<ul>
+  <li>“AI Explained in 3 Simple Steps”</li>
+  <li>“How to Zoom In on Your Phone Screen”</li>
+  <li>“Top 5 Mobile Features Seniors Love”</li>
+  <li>“Digital Safety Basics: Passwords Made Easy”</li>
+</ul>
+</p>
+<p>
+ <b> Design & Accessibility Features</b>
+ <ul>
+  <li>Zoomed-In Screens:Larger text, icons, and buttons</li>
+  <li>Slow-Paced Videos:Tutorials that roll at a comfortable speed</li>
+  <li>Inclusive Layouts:High-contrast themes, voice narration, and simple navigation</li>
+  <li>Interactive Guides:Step-by-step visuals and infographics</li>
+ </ul>
+
+
+</p>
   </main>
+   <footer>
+    <p>&copy; 2026 Medha Bytes Website</p>
+  </footer>
 </body>
 
 </html>
