Added bootstrap styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,82 +4,117 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
   <title>Medha Bytes Site</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-  <main>
-    <h1>Welcome to Medha Bytes!!</h1>
-    <h2>Technology Made Simple, Accessible, and Human</h2>
-    <h3>At Medhabytes, we blend human intelligence (Medha) with digital innovation (Bytes) to ensure no one—especially senior citizens—is left behind in the fast-changing world of technology.</h3>
-<p>
-<b>CTA Buttons:</b>
-<ul>
-  <li>Discover Our Solutions</li>
-  <li>Learn with Byte-Sized Knowledge</li>
-</ul>
+<body class="bg-light text-dark">
 
-</p>
-<h3>About Us</h3>
-<b>Our Philosophy:</b>
-We believe technology should empower everyone. For seniors, small businesses, and curious learners, we design solutions that are simple, inclusive, and engaging.
-</p>
-<p>
-<b>Our Promise:</b>
-<ul>
-  <li>Accessible websites with zoomed-in layouts and clear navigation</li>
-  <li>Videos paced slower than usual, with subtitles and voiceovers</li>
-  <li>Byte-sized articles that explain AI, mobile phone features, and everyday digital tools in plain language</li>
-</ul>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Medha Bytes</a>
+    </div>
+  </nav>
 
-</p>
-<p>
-<b>Services</b>
-<ul>
-  <li>
-     Senior-Friendly Websites
-     <ul><li>Large fonts, high-contrast colors, and simplified menus for easy navigation.</li></ul>
-  </li>
-  <li>
-    Educational Videos
-<ul><li>Slow-paced tutorials with clear visuals, subtitles, and voice guidance.</li></ul>
-  </li>
-  <li>
-Byte-Sized Knowledge Articles
-<ul><li>Short, easy-to-read guides on topics like “What is AI?”, “How to use WhatsApp,” or “Managing photos on your phone.”</li></ul>
-  </li>
-  <li>
-Small Business Solutions
-<ul><li>Affordable websites and apps that help local businesses thrive online.</li></ul>
-  </li>
-</ul>
+  <!-- Hero Section -->
+  <header class="bg-white py-5 text-center shadow-sm">
+    <div class="container">
+      <h1 class="display-4 fw-bold text-primary">Welcome to Medha Bytes!!</h1>
+      <h2 class="lead text-secondary">Technology Made Simple, Accessible, and Human</h2>
+      <p class="mt-3 fs-5">
+        At Medhabytes, we blend human intelligence (Medha) with digital innovation (Bytes) to ensure no one—especially senior citizens—is left behind in the fast-changing world of technology.
+      </p>
+      <div class="mt-4">
+        <a href="#" class="btn btn-success btn-lg me-2">Discover Our Solutions</a>
+        <a href="#" class="btn btn-outline-primary btn-lg">Learn with Byte-Sized Knowledge</a>
+      </div>
+    </div>
+  </header>
 
-</p>
-<p>
-<b>Knowledge Hub (Blog/Resources)</b>
-<ul>
-  <li>“AI Explained in 3 Simple Steps”</li>
-  <li>“How to Zoom In on Your Phone Screen”</li>
-  <li>“Top 5 Mobile Features Seniors Love”</li>
-  <li>“Digital Safety Basics: Passwords Made Easy”</li>
-</ul>
-</p>
-<p>
- <b> Design & Accessibility Features</b>
- <ul>
-  <li>Zoomed-In Screens:Larger text, icons, and buttons</li>
-  <li>Slow-Paced Videos:Tutorials that roll at a comfortable speed</li>
-  <li>Inclusive Layouts:High-contrast themes, voice narration, and simple navigation</li>
-  <li>Interactive Guides:Step-by-step visuals and infographics</li>
- </ul>
+  <!-- About Us -->
+  <main class="container my-5">
+    <section class="mb-5">
+      <h3 class="text-primary">About Us</h3>
+      <p><strong>Our Philosophy:</strong> We believe technology should empower everyone. For seniors, small businesses, and curious learners, we design solutions that are simple, inclusive, and engaging.</p>
+      <p><strong>Our Promise:</strong></p>
+      <ul class="list-group">
+        <li class="list-group-item">Accessible websites with zoomed-in layouts and clear navigation</li>
+        <li class="list-group-item">Videos paced slower than usual, with subtitles and voiceovers</li>
+        <li class="list-group-item">Byte-sized articles that explain AI, mobile phone features, and everyday digital tools in plain language</li>
+      </ul>
+    </section>
 
+    <!-- Services -->
+    <section class="mb-5">
+      <h3 class="text-primary">Services</h3>
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Senior-Friendly Websites</h5>
+              <p class="card-text">Large fonts, high-contrast colors, and simplified menus for easy navigation.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Educational Videos</h5>
+              <p class="card-text">Slow-paced tutorials with clear visuals, subtitles, and voice guidance.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Byte-Sized Knowledge Articles</h5>
+              <p class="card-text">Short, easy-to-read guides on topics like “What is AI?”, “How to use WhatsApp,” or “Managing photos on your phone.”</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Small Business Solutions</h5>
+              <p class="card-text">Affordable websites and apps that help local businesses thrive online.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-</p>
+    <!-- Knowledge Hub -->
+    <section class="mb-5">
+      <h3 class="text-primary">Knowledge Hub</h3>
+      <ul class="list-group">
+        <li class="list-group-item">AI Explained in 3 Simple Steps</li>
+        <li class="list-group-item">How to Zoom In on Your Phone Screen</li>
+        <li class="list-group-item">Top 5 Mobile Features Seniors Love</li>
+        <li class="list-group-item">Digital Safety Basics: Passwords Made Easy</li>
+      </ul>
+    </section>
+
+    <!-- Accessibility Features -->
+    <section class="mb-5">
+      <h3 class="text-primary">Design & Accessibility Features</h3>
+      <ul class="list-group">
+        <li class="list-group-item">Zoomed-In Screens: Larger text, icons, and buttons</li>
+        <li class="list-group-item">Slow-Paced Videos: Tutorials that roll at a comfortable speed</li>
+        <li class="list-group-item">Inclusive Layouts: High-contrast themes, voice narration, and simple navigation</li>
+        <li class="list-group-item">Interactive Guides: Step-by-step visuals and infographics</li>
+      </ul>
+    </section>
   </main>
-   <footer>
-    <p>&copy; 2026 Medha Bytes Website</p>
+
+  <!-- Footer -->
+  <footer class="bg-primary text-white text-center py-3">
+    <p class="mb-0">&copy; 2026 Medha Bytes Website</p>
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
