Updated knowledge hub section

--- a/src/index.html
+++ b/src/index.html
@@ -86,15 +86,54 @@
     </section>
 
     <!-- Knowledge Hub -->
-    <section class="mb-5">
-      <h3 class="text-primary">Knowledge Hub</h3>
-      <ul class="list-group">
-        <li class="list-group-item">AI Explained in 3 Simple Steps</li>
-        <li class="list-group-item">How to Zoom In on Your Phone Screen</li>
-        <li class="list-group-item">Top 5 Mobile Features Seniors Love</li>
-        <li class="list-group-item">Digital Safety Basics: Passwords Made Easy</li>
-      </ul>
-    </section>
+   
+<section class="mb-5">
+  <h3 class="text-primary mb-4">Knowledge Hub</h3>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+    
+    <div class="col">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">AI Explained in 3 Simple Steps</h5>
+          <p class="card-text">A beginner-friendly breakdown of artificial intelligence concepts.</p>
+          <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">How to Zoom In on Your Phone Screen</h5>
+          <p class="card-text">Step-by-step guide to accessibility features on smartphones.</p>
+          <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">Top 5 Mobile Features Seniors Love</h5>
+          <p class="card-text">Explore the most useful smartphone tools for senior citizens.</p>
+          <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">Digital Safety Basics: Passwords Made Easy</h5>
+          <p class="card-text">Simple tips for creating and managing secure passwords.</p>
+          <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- Accessibility Features -->
     <section class="mb-5">
