Added image as thumbnail

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,12 @@
   <!-- Hero Section -->
   <header class="bg-white py-5 text-center shadow-sm">
     <div class="container">
-      <img src="images/hero-banner.jpg" alt="Medha Bytes Hero Banner" class="img-fluid mb-4">
+      
+      <img src="images/hero-banner.jpg" 
+         alt="Medha Bytes Logo" 
+         class="rounded-circle mb-4 border shadow-lg animate-fade" 
+         style="width: 150px; height: 150px; object-fit: cover;">
+
       <h1 class="display-4 fw-bold text-primary">Welcome to Medha Bytes!!</h1>
       <h2 class="lead text-secondary">Technology Made Simple, Accessible, and Human</h2>
       <p class="mt-3 fs-5">
